# axiom-cli

./: .axiom.yaml  .env  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  check_links.py  patch.py  patch10.py  patch11.py  patch12.py  patch13.py  patch14.py  patch15.py  patch2.py  patch3.py  patch4.py  patch5.py  patch6.py  patch7.py  patch8.py  patch9.py  test_learning_1775438366014.db  test_learning_1775503043548.db  test_learning_1775504814356.db  test_learning_1775505085317.db  test_learning_1775505594987.db  test_regex.rs  verify_links.py
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
.jules/: bolt.md
Formula/: axiom.rb
config/schemas/: apt.yaml  cargo.yaml  cloud.yaml  data.yaml  docker.yaml  git.yaml  go.yaml  io.yaml  journalctl.yaml  jq.yaml  kubectl.yaml  ls.yaml  npm.yaml  ps.yaml  rg.yaml  terraform.yaml
docs/: PHASE_1_GUIDE.md  TOOLSET_ROADMAP.md  WEB_ECOSYSTEM_PLAN.md
docs/en/: README.md
docs/en/ai-integration/: agents.md
docs/en/developer-guide/: architecture.md  command-standard.md  contributing.md  plugins.md  schemas.md
docs/en/getting-started/: installation.md  quick-start.md
docs/en/project/: dev-log.md  pulse-control-plane.md  roadmap.md
docs/en/user-guide/: cli-reference.md  core-concepts.md  telemetry-and-privacy.md
docs/es/: README.md
docs/es/empezando/: inicio-rapido.md  instalacion.md
docs/es/guia-desarrollador/: arquitectura.md  contribuyendo.md  estandar-comandos.md  plugins.md  schemas.md
docs/es/guia-usuario/: conceptos-clave.md  referencia-cli.md  telemetria-y-privacidad.md
docs/es/integracion-ia/: agentes.md
docs/es/proyecto/: log-desarrollo.md  pulse-control-plane.md  roadmap.md
lab/: Dockerfile.test  arena.py  battle_groq.py  check_links.py  e2e_stealth_test.sh  test_hook.zsh
lab/tmp_home/: GEMINI.md
src/: config.rs  error.rs  lib.rs  main.rs  session.rs
src/engine/: discovery.rs  doctor.rs  handshake.rs  installer.rs  intelligence.rs  intent_discovery.rs  mod.rs  plugins.rs  reporting.rs  storage.rs  telemetry.rs  transformer.rs  ui.rs  updater.rs
src/engine/commands/: cargo.rs  cloud.rs  docker.rs  git.rs  go.rs  io.rs  journalctl.rs  jq.rs  kubectl.rs  ls.rs  mod.rs  npm.rs  ps.rs  rg.rs  terraform.rs
src/gateway/: core.rs  detective.rs  filters.rs  mod.rs  process.rs  render.rs  stream.rs
src/persistence/: analytics.rs  mod.rs
src/privacy/: enterprise.rs  entropy.rs  mod.rs  redactor.rs
src/schema/: mod.rs
tests/: analytics_test.rs  cargo_insight_test.rs  common.rs  core_stress_test.rs  docker_insight_test.rs  git_insight_test.rs  integration_test.rs  learning_lifecycle_test.rs  lifecycle_ops_test.rs  ls_insight_test.rs  ls_versions_test.rs  ps_insight_test.rs  recipe_pipeline_test.rs  rg_insight_test.rs  stealth_ops_test.rs  telemetry_config_test.rs  tier1_tools_test.rs  tier2_tools_test.rs  tier3_tools_test.rs  tier4_tools_test.rs
tests/fixtures/: cargo_check_raw.txt  curl_axiom_raw.txt  docker_ps_raw.txt  git_log_raw.txt  git_status_raw.txt  grep_axiom_raw.txt  ls_go_project.txt  ls_la_axiom.txt  ls_node_project.txt  ls_rust_project.txt  ps_aux_raw.txt
