[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Dev Team"]
description = "The Semantic Token Streamer: Intent-Aware CLI Compression for LLMs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI Argument parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security & Entropy
regex = "1.0"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# WASM Runtime
wasmtime = "19.0"

# Fuzzy Matching
strsim = "0.11"

# Local AI Embeddings
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"

# AI Model Hub (Configured to use ureq with rustls)
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# Process Monitoring
sysinfo = "0.30"

# Telemetry & Time
chrono = "0.4"
# Http Client (Standardized features for ureq 2.9)
ureq = { version = "2.9", features = ["json", "rustls-tls-native-certs"] }

[dev-dependencies]
# For testing
tokio-test = "0.4"
tempfile = "3.0"
