[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Dev Team"]
description = "The Semantic Token Streamer: Intent-Aware CLI Compression for LLMs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI Argument parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security & Entropy
regex = "1.0"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# WASM Runtime
wasmtime = "19.0"

# Fuzzy Matching
strsim = "0.11"

# Local AI Embeddings
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"

# Telemetry & Identity
chrono = "0.4"
ureq = { version = "2.9", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
machine-uid = "0.3"

# Process Monitoring
sysinfo = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary
opt-level = 3 # Maximum optimization
lto = true    # Link Time Optimization for smaller/faster binaries

[dev-dependencies]
# For testing
tokio-test = "0.4"
tempfile = "3.0"
